fix(main): ajustando gap dos cards

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ a:hover {
 .time {
   display: flex;
   flex-direction: column;
-  padding: 50px 170px;
+  padding: 50px 150px;
   align-items: center;
 }
 
@@ -92,7 +92,7 @@ a:hover {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 25px;
+  gap: 65px;
 }
 
 .card {
